--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"manifest_version": 2,
 	"browser_specific_settings": {
 		"gecko": {
-		  "id": "gopanic@jaduastudios.com",
+		  "id": "lespoof@jaduastudios.com",
 		  "strict_min_version": "101.0"
 		}
 	  },
@@ -42,5 +42,5 @@
   ],
   "web_accessible_resources": [
     "scripts/inject.js"
-  ],
+  ]
 }
